--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,4 @@ indicatif = { version = "0.18.0", features = ["tokio"] }
 reqwest = "0.12.23"
 serde = { version = "1.0.226", features = ["derive"] }
 serde_json = "1.0.145"
-tokio = { version = "1.47.1", meatures = ["full"] }
+tokio = { version = "1.47.1", meatures = ["full","std-io","derive"] }
