--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "latin-cli"
 version = "1.0.0"
-edition = "2024"
+edition = "2021"
 authors = ["shuntia <shuntia@shuntia.net>"]
 description="A command line latin dictionary."
 readme="README.md"
@@ -13,9 +13,9 @@ keywords=["latin","dictionary"]
 
 [dependencies]
 anyhow = "1.0.100"
-clap = { version = "4.5.48", features = ["derive"] }
-indicatif = { version = "0.18.0", features = ["tokio"] }
-reqwest = "0.12.23"
-serde = { version = "1.0.226", features = ["derive"] }
-serde_json = "1.0.145"
-tokio = { version = "1.47.1", meatures = ["full","std-io","derive"] }
+clap = { version = "4.5.8", features = ["derive"] }
+indicatif = { version = "0.17", features = ["tokio"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "io-util"] }
