--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ldict"
-version = "1.0.4"
+version = "1.1.0"
 edition = "2021"
 authors = ["shuntia <shuntia@shuntia.net>"]
 description="A command line latin dictionary."
@@ -13,9 +13,9 @@ keywords=["latin","dictionary"]
 
 [dependencies]
 anyhow = "1.0.100"
-clap = { version = "4.5.51", features = ["derive"] }
+clap = { version = "4.5.54", features = ["derive"] }
 indicatif = { version = "0.18", features = ["tokio"] }
-reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.13.1", default-features = false, features = ["json", "query", "rustls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "io-util"] }
+tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "io-util"] }
